Fix issue with visible phones for screens

--- a/components/atoms/Meta/meta.scss
+++ b/components/atoms/Meta/meta.scss
@@ -34,6 +34,11 @@
   }
 }
 
+// -------------------------| Types
+.phone {
+  display: none;
+}
+
 // -------------------------| Print styles
 @media print {
   .addon {
@@ -42,5 +47,9 @@
 
   .icon {
     transform: translateY(0);
+  }
+
+  .phone {
+    display: flex;
   }
 }
